<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtShowName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtEpisodeName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/episode_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
    
	    <SeekBar
	            android:id="@+id/seekBar1"
	            android:layout_width="fill_parent"
	            android:layout_marginTop="5dp"
	            android:layout_height="wrap_content" />
    
	</LinearLayout>
	    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <MediaController
            android:id="@+id/mediaController"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </MediaController>

        <ImageButton
            android:id="@+id/imgBtnPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/previous"
            android:src="@drawable/previous_green" 
            android:onClick="onClick" />

        <ImageButton
            android:id="@+id/imgBtnRewind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/rewind"
            android:src="@drawable/rewind_green" 
            android:onClick="onClick" />

        <ImageButton
            android:id="@+id/imgBtnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/play"
            android:src="@drawable/play_green"
            android:onClick="onClick" />
        
        <ImageButton
            android:id="@+id/imgBtnFastForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/fast_forward"
            android:src="@drawable/fast_forward_green"
            android:onClick="onClick" />

        <ImageButton
            android:id="@+id/imgBtnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/next"
            android:src="@drawable/next_green"
            android:onClick="onClick" />

    </LinearLayout>
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtEpisodeDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <RatingBar
            android:id="@+id/ratingBarEpisode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stepSize="1.0"
            android:numStars="5" />
        
     </LinearLayout>

</LinearLayout>
